# Adavanced-ECMS

./: LICENSE  README.md
ADVANCED_ECMS/: CMakeLists.txt  package.xml
ADVANCED_ECMS/data/: Bat_indexRint  Bat_indexSOC  Bat_indexVoc  Cy_time  Cy_v  En_Inerta  En_maxTrq  MG_i  MG_mapData  MG_mapTrq  MG_maxRPM  MG_maxTrq  TM_mapTrq.csv  V_m  accel_cycle  example.csv  velocity_cycle
ADVANCED_ECMS/include/: ICEMG.hpp  VehicleInfo.hpp  VehicleState.hpp  data_loader.hpp  interp_tool.hpp  optimizer.hpp  performance.hpp
ADVANCED_ECMS/output/: SOC_per.csv  T1_per.csv  Ti_per.csv  W1_per.csv  Wi_per.csv  dSOC_per.csv  gear_per.csv  mass_per.csv  mode_per.csv  mu_per.csv  raw_per.csv
ADVANCED_ECMS/output/iter/: Fuel_Consumption.csv  SOC_constraint.csv  mu.csv  raw.csv
ADVANCED_ECMS/src/: ICEMG.cpp  Tool.cpp  VehicleInfo.cpp  constraints.cpp  data_loader.cpp  example.cpp  interp_tool.cpp  optimizer.cpp  performance.cpp
Advanced_ECMS/: CMakeLists.txt  package.xml
Advanced_ECMS/data/: TM_mapData.csv
Advanced_ECMS/include/: data_loader.hpp  optimizer.hpp
Advanced_ECMS/src/: constraints.cpp  optimizer.cpp  performance.cpp
Advanced_ecms/cfg/: ecms.yaml
Advanced_ecms/data/: En_FC  En_mapRPM  En_mapTrq  MG_mapRPM  TM_mapRPM.csv
Advanced_ecms/include/: ICEMG.hpp  optimizer.hpp
Advanced_ecms/output/: SOC_per.csv  T1_per.csv  dSOC_per.csv  gear_per.csv  mass_per.csv  raw_per.csv
Advanced_ecms/output/iter/: Fuel_Consumption.csv  SOC_constraint.csv
Advanced_ecms/src/: Tool.cpp  interp_tool.cpp  optimizer.cpp  performance.cpp
advanced_ecms/: CMakeLists.txt  package.xml
advanced_ecms/data/: En_mapData  En_minTrq
advanced_ecms/include/: VehicleInfo.hpp  data_loader.hpp  interp_tool.hpp  performance.hpp
advanced_ecms/launch/: ecms.launch
advanced_ecms/output/: Ti_per.csv  W1_per.csv  Wi_per.csv  mode_per.csv  mu_per.csv
advanced_ecms/output/iter/: mu.csv  raw.csv
advanced_ecms/src/: ICEMG.cpp  VehicleInfo.cpp  constraints.cpp  data_loader.cpp  example.cpp
